# DataScience-UT-Projects

./: .gitignore  README.md
CA0/: README.md  (+1 more)
CA2/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
CA2/darooghe/application/batch_processing/: transaction_pattern_job.py
CA2/darooghe/application/job/batch/: commission_analysis_job.py  transaction_pattern_job.py
CA2/darooghe/application/job/stream/: commission_analytics_job.py  fraud_detection_job.py
CA2/darooghe/application/repository/: merchant_repository.py  transaction_repository.py
CA2/darooghe/application/service/: commission_analytics.py  fraud_detector.py  transaction_consumer.py  transaction_data_loader.py  transaction_producer.py
CA2/darooghe/domain/entitiy/: device.py  location.py  transaction.py
CA2/darooghe/domain/entity/: commission.py  customer.py  device.py  error.py  fraud.py  location.py  transaction.py
CA2/darooghe/domain/factory/: transaction_factory.py
CA2/darooghe/domain/service/: transaction_generator.py
CA2/darooghe/domain/util/: logging.py  serialization.py  time.py
CA2/darooghe/infrastructure/batch_processing/: spark_config.py
CA2/darooghe/infrastructure/data_processing/: schemas.py  spark_config.py  spark_session_manager.py  stream.py
CA2/darooghe/infrastructure/messaging/: kafka.py  kafka_config.py
CA2/darooghe/infrastructure/persistence/: mongo.py  mongo_config.py  mongo_setup.py
CA2/darooghe/infrastructure/service/messaging/: kafka.py  kafka_config.py
CA2/scripts/: darooghe.sh  run_notebooks.sh
(+7 files in other folders)
