[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darooghe"
version = "0.1.0"
description = "payment processing pipeline"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pyspark==3.5.5",
    "confluent-kafka==2.9.0",
    "pymongo==4.12.0",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "plotly==6.0.1",
    "dash==3.0.2",
    "python-dotenv==1.1.0",
    "pytest==8.3.5",
    "Faker==37.1.0",
]

[tool.setuptools]
packages = ["darooghe"]

[tool.setuptools.package-data]
darooghe = ["*.json", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = "312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
